# MCMCSimulationLib

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  FILESTRUCTURE.md  LICENSE.md  README.md  TODO.md  build.sh  commands.md  generate_application.py  setup.py  sonar-project.properties
.github/workflows/: ci.yml  sonarcloud.yml
app/: CMakeLists.txt  MCMCSimulationLib_app.cpp
app/include/: config.h  config.h.in  ising_model.hpp
app/jupyter_notebooks/: ising_model_cheat_sheet.ipynb
app/python_scripts/: ising_model_measures.py
app/src/: main.cpp
application_wrapper/: COPYING.md  cookiecutter.json  requirements-dev.txt
application_wrapper/hooks/: post_gen_project.py
application_wrapper/{{cookiecutter.project_slug}}/: CMakeLists.txt  FILESTRUCTURE.md  README.md  TODO.md  setup.py
application_wrapper/{{cookiecutter.project_slug}}/doc/: conf.py
application_wrapper/{{cookiecutter.project_slug}}/include/{{cookiecutter.project_slug}}/: config.h.in  simulation_header.hpp  system.hpp  {{cookiecutter.project_slug}}.hpp
application_wrapper/{{cookiecutter.project_slug}}/jupyter_notebooks/: ising_model_cheat_sheet.ipynb
application_wrapper/{{cookiecutter.project_slug}}/python_examples/: custom_simulation.py  evaluation.py  mcmc_simulation.py  mode_simulation.py
application_wrapper/{{cookiecutter.project_slug}}/python_pybind/: CMakeLists.txt  {{cookiecutter.project_slug}}.py  {{cookiecutter.project_slug}}_python.cpp
application_wrapper/{{cookiecutter.project_slug}}/python_scripts/: custom_measures.py  custom_modules.py  {{cookiecutter.project_slug}}_measures.py
application_wrapper/{{cookiecutter.project_slug}}/python_scripts/examples/: correlation_time.py  expectation_value.py  loading_configurations.py  pytorch_data_generation.py  pytorch_geometric_dataset.py
application_wrapper/{{cookiecutter.project_slug}}/pytorch_support/: pytorch_in_memory_dataset.py  pytorch_in_real_time_dataset.py
application_wrapper/{{cookiecutter.project_slug}}/src/: main.cpp
bash_scripts/: build_examples.sh  build_project.sh  build_simulation.sh  generate_project.sh  generic_compiling.sh  generic_main_builder.sh  generic_project_builder.sh  generic_simulation_builder.sh  project_config.sh  project_config_template.sh  write_cmake_lists_file_main_project.sh  write_config_h_in_file.sh  write_main_cpp_file.sh  write_project_related_build_simulation_sh_file.sh  write_simulation_header_hpp_file.sh
doc/: CMakeLists.txt  advanced_features.rst  basic_features.rst  conf.py  functional_features.rst  getting_started.md  getting_started.rst  index.rst  modules.rst  python_modules.rst  requirements-rtd.txt  requirements.txt  tutorials.rst
examples/: ising_model.hpp
examples/IsingModel/: CMakeLists.txt
examples/IsingModel/include/ising_model/: ising_model.hpp  simulation_header.hpp  system.hpp
examples/IsingModel/jupyter_notebooks/: ising_model_cheat_sheet.ipynb
examples/IsingModel/python_pybind/: ising_model.py
examples/IsingModel/python_scripts/: custom_measures.py  custom_modules.py  custom_simulation.py  ising_model_measures.py  mode_simulation.py
examples/IsingModel/python_scripts/examples/: correlation_time.py  expectation_value.py  loading_configurations.py  pytorch_geometric_dataset.py  pytorch_in_memory_dataset.py
examples/IsingModel/src/: main.cpp
examples/ONModelGPU/: CMakeLists.txt
examples/SavingAndLoading/: CMakeLists.txt  README.md
examples/SavingAndLoading/include/saving_and_loading/: config.h.in  simulation_header.hpp  systembase_template.hpp
examples/SavingAndLoading/src/: main.cpp
examples/ScalarTheory/: CMakeLists.txt  setup.py
examples/ScalarTheory/python_pybind/: CMakeLists.txt  ScalarTheory_python.cpp  scalar_theory.py  scalartheory_python.cpp
examples/ScalarTheoryGPU/: CMakeLists.txt  setup.py
examples/ScalarTheoryGPU/include/scalar_theory_gpu/: config.h.in  scalar_theory_gpu.hpp  scalar_theory_gpu_helper.hpp
examples/ScalarTheoryGPU/include/thrust/: thrust_functors.hpp  thrust_header.hpp
examples/ScalarTheoryGPU/python_pybind/: CMakeLists.txt  ScalarTheoryGPU_python.cpp  scalar_theory_gpu.py  scalartheorygpu_python.cpp
examples/ScalarTheoryGPU/src/: main.cpp  scalar_theory_gpu_helper.cu
examples/SimulationAndExecution/: CMakeLists.txt  FILESTRUCTURE.md
examples/bash_scripts/: build_simulation.sh
examples/include/: ising_model.hpp  save_and_load.hpp  simple_simulation.hpp
examples/jupyter_notebooks/: ising_model_cheat_sheet.ipynb
examples/python_scripts/: ising_model_measures.py
examples/src/: main.cpp
include/cluster_support/: cluster_integration.hpp  config.h  cpu_cluster_integration.hpp  gpu_cluster_integration.hpp  virtual_env_integration.hpp
include/command_line_support/: cmd.hpp  cmdint.hpp  path_parameters.hpp
include/execution/: executer.hpp
include/mcmc_pybind/: pybind_simulation_parameters.hpp
include/mcmc_simulation/: header.hpp  markov_chain.hpp  measure_policy.hpp  measure_systembase.hpp  plain_systembase.hpp  sampler.hpp  simulation.hpp  systembase.hpp  systembase_measures.hpp  systembase_old.hpp  systembase_parameters.hpp
include/measure_processors/: readable_measure.hpp
include/modes/: correlation_time.hpp  equilibrium_time.hpp  mode_header.hpp  (+2 more)
python/: CMakeLists.txt  MCMCSimulationLib_python.cpp  config.h.in  mcmc_system.py  mcmcsimulationlib_python.cpp  mode_simulation.py
python/tests/: test_python_bindings.py
src/: CMakeLists.txt  main.cpp
src/cluster_support/: cluster_integration.cpp  cpu_cluster_integration.cpp  gpu_cluster_integration.cpp  virtual_env_integration.cpp
src/command_line_support/: cmd.cpp  cmdint.cpp
src/execution/: executer.cpp
src/mcmc_simulation/: simulation.cpp
src/mcmc_simulation/sampler/: gaussian_sampler.cpp  hat_function_sampler.cpp  uniform_sampler.cpp
src/mcmc_simulation/util/: python_integration.cpp  random.cpp
src/measure_processors/: readable_measure.cpp
templates/: measure_system.hpp  plain_systembase_template.hpp  system.hpp  systembase_measures_template.hpp  systembase_template.hpp
tests/: CMakeLists.txt  MCMCSimulationLib_t.cpp
(+101 files in other folders)
