pybind11_add_module(scalartheory_python scalartheory_python.cpp)

if(RUN_WITH_PYTHON_BACKEND)
 target_compile_definitions(scalartheory_python PUBLIC PYTHON_BACKEND)
endif()

target_link_libraries(scalartheory_python PUBLIC mcmcsimulationlib::mcmcsimulationlib paramhelper::paramhelper)
set_target_properties(scalartheory_python PROPERTIES OUTPUT_NAME scalartheorysimulation)